# vidquery

./: .gitignore  README.md  pyproject.toml
src-gui/: package-lock.json  package.json  vite.config.js
src-gui/src/: App.svelte  app.css  main.js
src-gui/src/lib/: Player.svelte
src/vidquery/: cli.py  gui.py  models.py  searchparser.py  vidquery.py
src/vidquery/html/: index.html
src/vidquery/html/_app/: version.json
src/vidquery/html/_app/immutable/assets/: _layout.Br_XovY_.css
src/vidquery/html/_app/immutable/chunks/: entry.f1U8-Mne.js  index.z-WhggEX.js  scheduler.D9xsQs6S.js
src/vidquery/html/_app/immutable/entry/: app.CrM9vRoB.js  start.IWFnOoep.js
src/vidquery/html/_app/immutable/nodes/: 0.C5l7lgdx.js  1.Da4-P4zm.js  2.BT4RPayW.js
src/vidquery/parsers/: face_rec.py  image_caption.py  shots.py  vosk_dialog.py
